

v0.7.1.1 BETA:
  * Added comparing operator for some LunaLua classes.
  * Added PlayerSettings-Class
  * Added PNG support for custom level items (i.e. npc-1.png)
  * Fixed screenshot-function (With changes: PNG-Format and filename is now date + time)
  * Added experimental gif recorder using FreeImage library. Can be toggled with F11. Don't record for too long or it may crash due to memory overflow (too much frames to encode)