@@ -287,6 +287,7 @@ void CLunaLua::bindAll()
                 def("drawImageToScene", (void(*)(const LuaProxy::Graphics::LuaImageResource&, int, int, float, lua_State*))&LuaProxy::Graphics::drawImageToScene),
                 def("drawImageToScene", (void(*)(const LuaProxy::Graphics::LuaImageResource&, int, int, int, int, int, int, lua_State*))&LuaProxy::Graphics::drawImageToScene),
                 def("drawImageToScene", (void(*)(const LuaProxy::Graphics::LuaImageResource&, int, int, int, int, int, int, float, lua_State*))&LuaProxy::Graphics::drawImageToScene),
+                def("isOpenGLEnabled", &LuaProxy::Graphics::isOpenGLEnabled),
                 def("glSetTexture", &LuaProxy::Graphics::glSetTexture),
                 def("glSetTextureRGBA", &LuaProxy::Graphics::glSetTextureRGBA)
                 // glDrawTriangles will be defined at runtime using FFI
